test/visibility/except/emptyExcept.good
emptyExcept.chpl:8: error: syntax error near ';'
